--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "pg": "^6.2.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.0.1",
     "nodemon": "^1.11.0"
   }
 }
