--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "v": "node -v"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,11 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.15.3",
+    "node": "6.10.3",
     "pg": "^6.2.4"
+  },
+  "engines": {
+    "node": "8.11.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
