--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "mocha",
-    "v": "node -v"
+    "v": "node -v",
+    "heroku-postbuild": "npm install --production"
   },
   "repository": {
     "type": "git",
