--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "coveralls": "^3.0.9",
     "mocha": "^2.5.3",
-    "nodemon": "^1.11.0",
-    "supertest": "^4.0.2"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.11.0"
   }
 }
